# ArtnetConverter

./: ArtnetConverter.js  CMakeLists.txt  Readme.md
.github/workflows/: build.yml  clang-format.yml  remove-old-artifacts.yml
qml/ArtnetConverter/: Application.qml  ApplicationWindow.qml  SplashScreenApplication.qml  SplashScreenWindow.qml  qmldir
src/: Main.cpp
